--- a/main/foodandhealth/views/index.html
+++ b/main/foodandhealth/views/index.html
@@ -19,7 +19,7 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<a href="index.html" class="logo"><strong>EatHealthy</strong> <span>by DL Gang</span></a>
+						<a href="/" class="logo"><strong>EatHealthy</strong> <span>by DL Gang</span></a>
 						<nav>
 							<a href="#menu">Menu</a>
 						</nav>
@@ -28,7 +28,7 @@
 				<!-- Menu -->
 					<nav id="menu">
 						<ul class="links">
-							<li><a href="index.html">Home</a></li>
+							<li><a href="/">Home</a></li>
 							<li><a href="/cuisines">Cuisines</a></li>
 							<li><a href="generic.html">Generic</a></li>
 							<li><a href="elements.html">Elements</a></li>
