update app.js and restructure repo

--- a/main/foodandhealth/views/diet.html
+++ b/main/foodandhealth/views/diet.html
@@ -50,17 +50,17 @@
 					<div id="main">
 						<div class="inner">
 							<header>
-								<h1>CUISINES</h1>
+								<h1>DIETS</h1>
 							</header>
 							<section class="tiles">
 								<article class="style1">
 									<span class="image">
 										<img src="images1/pic01.jpg" alt="" />
 									</span>
-									<a href="/food_item?cuisine=italian">
-										<h2>Italian</h2>
+									<a href="/food_item_list?diet=vegan">
+										<h2>Vegan</h2>
 										<div class="content">
-											<p>Pasta</p>
+											<p>ooo yum</p>
 										</div>
 									</a>
 								</article>
@@ -68,10 +68,10 @@
 									<span class="image">
 										<img src="images1/pic02.jpg" alt="" />
 									</span>
-									<a href="/food_item?cuisine=indian">
-										<h2>Indian</h2>
+									<a href="/food_item_list?diet=non-veg">
+										<h2>Non-veg</h2>
 										<div class="content">
-											<p>Butter Panneer</p>
+											<p>Butter Chicken</p>
 										</div>
 									</a>
 								</article>
