--- a/main/foodandhealth/views/food_item_list.html
+++ b/main/foodandhealth/views/food_item_list.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Cuisines</title>
+		<title>Food Items</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="/css1/main.css" />
@@ -50,36 +50,36 @@
 					<div id="main">
 						<div class="inner">
 							<header>
-								<h1>CUISINES</h1>
+								<h1>Food Items</h1>
 							</header>
 							<section class="tiles">
 								<article class="style1">
 									<span class="image">
-										<img src="images1/pic01.jpg" alt="" />
+										<img src="images/pic01.jpg" alt="" />
 									</span>
-									<a href="/food_item?cuisine=italian">
-										<h2>Italian</h2>
+									<a href="/food_item?item=i1">
+										<h2>Pasta</h2>
 										<div class="content">
-											<p>Pasta</p>
+											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
 										</div>
 									</a>
 								</article>
 								<article class="style2">
 									<span class="image">
-										<img src="images1/pic02.jpg" alt="" />
+										<img src="images/pic02.jpg" alt="" />
 									</span>
-									<a href="/food_item?cuisine=indian">
-										<h2>Indian</h2>
+									<a href="recipe.html">
+										<h2>Lorem</h2>
 										<div class="content">
-											<p>Butter Panneer</p>
+											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
 										</div>
 									</a>
 								</article>
 								<article class="style3">
 									<span class="image">
-										<img src="images1/pic03.jpg" alt="" />
+										<img src="images/pic03.jpg" alt="" />
 									</span>
-									<a href="generic.html">
+									<a href="recipe.html">
 										<h2>Feugiat</h2>
 										<div class="content">
 											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
@@ -88,9 +88,9 @@
 								</article>
 								<article class="style4">
 									<span class="image">
-										<img src="images1/pic04.jpg" alt="" />
+										<img src="images/pic04.jpg" alt="" />
 									</span>
-									<a href="generic.html">
+									<a href="recipe.html">
 										<h2>Tempus</h2>
 										<div class="content">
 											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
@@ -99,9 +99,9 @@
 								</article>
 								<article class="style5">
 									<span class="image">
-										<img src="images1/pic05.jpg" alt="" />
+										<img src="images/pic05.jpg" alt="" />
 									</span>
-									<a href="generic.html">
+									<a href="recipe.html">
 										<h2>Aliquam</h2>
 										<div class="content">
 											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
@@ -110,16 +110,17 @@
 								</article>
 								<article class="style6">
 									<span class="image">
-										<img src="images1/pic06.jpg" alt="" />
+										<img src="images/pic06.jpg" alt="" />
 									</span>
-									<a href="generic.html">
+									<a href="recipe.html">
 										<h2>Veroeros</h2>
 										<div class="content">
 											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
 										</div>
 									</a>
-								</article>
+								</article>								
 							</section>
+							<!-- <span class="image main"><img src="images/pic13.jpg" alt="" /></span> -->
 						</div>
 					</div>
 
@@ -172,5 +173,6 @@
 			<script src="/js/breakpoints.min.js"></script>
 			<script src="/js/util.js"></script>
 			<script src="/js/main.js"></script>
+
 	</body>
 </html>
