--- a/main/foodandhealth/views/index.html
+++ b/main/foodandhealth/views/index.html
@@ -30,8 +30,8 @@
 						<ul class="links">
 							<li><a href="/">Home</a></li>
 							<li><a href="/cuisines">Cuisines</a></li>
-							<li><a href="generic.html">Generic</a></li>
-							<li><a href="elements.html">Elements</a></li>
+							<li><a href="/news">News</a></li>
+							<li><a href="/template">Template</a></li>
 						</ul>
 						<ul class="actions stacked">
 							<li><a href="#" class="button primary fit">Get Started</a></li>
