--- a/main/foodandhealth/views/food_item.html
+++ b/main/foodandhealth/views/food_item.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Food Items</title>
+		<title>Elements - Phantom by HTML5 UP</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="/css1/main.css" />
@@ -21,9 +21,9 @@
 						<div class="inner">
 
 							<!-- Logo -->
-								<!-- <a href="index.html" class="logo">
+								<a href="index.html" class="logo">
 									<span class="symbol"><img src="images/logo.svg" alt="" /></span><span class="title">Phantom</span>
-								</a> -->
+								</a>
 
 							<!-- Nav -->
 								<nav>
@@ -39,133 +39,34 @@
 					<nav id="menu">
 						<h2>Menu</h2>
 						<ul>
-							<li><a href="index.html">Home</a></li>
-							<li><a href="generic.html">Ipsum veroeros</a></li>
-							<li><a href="generic.html">Tempus etiam</a></li>
-							<li><a href="generic.html">Consequat dolor</a></li>
-							<li><a href="elements.html">Elements</a></li>
+							<li><a href="/">Home</a></li>
+							<li><a href="/cuisines">Cuisines</a></li>
+							<li><a href="/news">News</a></li>
+							<li><a href="/template">Template</a></li>
 						</ul>
 					</nav>
 
 				<!-- Main -->
 					<div id="main">
 						<div class="inner">
-							<header>
-								<h1>Food Items</h1>
-							</header>
-							<section class="tiles">
-								<article class="style1">
-									<span class="image">
-										<img src="images/pic01.jpg" alt="" />
-									</span>
-									<a href="recipe.html">
-										<h2>Magna</h2>
-										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-										</div>
-									</a>
-								</article>
-								<article class="style2">
-									<span class="image">
-										<img src="images/pic02.jpg" alt="" />
-									</span>
-									<a href="recipe.html">
-										<h2>Lorem</h2>
-										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-										</div>
-									</a>
-								</article>
-								<article class="style3">
-									<span class="image">
-										<img src="images/pic03.jpg" alt="" />
-									</span>
-									<a href="recipe.html">
-										<h2>Feugiat</h2>
-										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-										</div>
-									</a>
-								</article>
-								<article class="style4">
-									<span class="image">
-										<img src="images/pic04.jpg" alt="" />
-									</span>
-									<a href="recipe.html">
-										<h2>Tempus</h2>
-										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-										</div>
-									</a>
-								</article>
-								<article class="style5">
-									<span class="image">
-										<img src="images/pic05.jpg" alt="" />
-									</span>
-									<a href="recipe.html">
-										<h2>Aliquam</h2>
-										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-										</div>
-									</a>
-								</article>
-								<article class="style6">
-									<span class="image">
-										<img src="images/pic06.jpg" alt="" />
-									</span>
-									<a href="recipe.html">
-										<h2>Veroeros</h2>
-										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-										</div>
-									</a>
-								</article>								
-							</section>
-							<!-- <span class="image main"><img src="images/pic13.jpg" alt="" /></span> -->
+							<h1>Nutrition</h1>
+							<img src="/home/hrishi/Food-and-Health-Full-Stack-Web-Application/main/foodandhealth/views/html5up-phantom/images/spoonacular-nutrition-widget.png"/>
+							<br><br>
+							<h1>Equipment</h1>
+							<img src="/home/hrishi/Food-and-Health-Full-Stack-Web-Application/main/foodandhealth/views/html5up-phantom/images/spoonacular-cooking-equipment-widget.png"/>
+							<br><br>
+							<h1>Recipe</h1>
+							<img src="/home/hrishi/Food-and-Health-Full-Stack-Web-Application/main/foodandhealth/views/html5up-phantom/images/recipe_card.jpg"/>
+							<br><br>
+							<h1>Taste</h1>
+							<img src="/home/hrishi/Food-and-Health-Full-Stack-Web-Application/main/foodandhealth/views/html5up-phantom/images/spoonacular-taste-widget.png"/>
+							<br><br>
+							<h1>Pricing</h1>
+							<img src="/home/hrishi/Food-and-Health-Full-Stack-Web-Application/main/foodandhealth/views/html5up-phantom/images/spoonacular-pricebreakdown-widget.png"/>
+							<br><br>
+
 						</div>
 					</div>
-
-				<!-- Footer -->
-					<!-- <footer id="footer">
-						<div class="inner">
-							<section>
-								<h2>Get in touch</h2>
-								<form method="post" action="#">
-									<div class="fields">
-										<div class="field half">
-											<input type="text" name="name" id="name" placeholder="Name" />
-										</div>
-										<div class="field half">
-											<input type="email" name="email" id="email" placeholder="Email" />
-										</div>
-										<div class="field">
-											<textarea name="message" id="message" placeholder="Message"></textarea>
-										</div>
-									</div>
-									<ul class="actions">
-										<li><input type="submit" value="Send" class="primary" /></li>
-									</ul>
-								</form>
-							</section>
-							<section>
-								<h2>Follow</h2>
-								<ul class="icons">
-									<li><a href="#" class="icon brands style2 fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="#" class="icon brands style2 fa-facebook-f"><span class="label">Facebook</span></a></li>
-									<li><a href="#" class="icon brands style2 fa-instagram"><span class="label">Instagram</span></a></li>
-									<li><a href="#" class="icon brands style2 fa-dribbble"><span class="label">Dribbble</span></a></li>
-									<li><a href="#" class="icon brands style2 fa-github"><span class="label">GitHub</span></a></li>
-									<li><a href="#" class="icon brands style2 fa-500px"><span class="label">500px</span></a></li>
-									<li><a href="#" class="icon solid style2 fa-phone"><span class="label">Phone</span></a></li>
-									<li><a href="#" class="icon solid style2 fa-envelope"><span class="label">Email</span></a></li>
-								</ul>
-							</section>
-							<ul class="copyright">
-								<li>&copy; Untitled. All rights reserved</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-							</ul>
-						</div>
-					</footer> -->
-
 			</div>
 
 		<!-- Scripts -->
