--- a/main/foodandhealth/views/cuisines.html
+++ b/main/foodandhealth/views/cuisines.html
@@ -57,7 +57,7 @@
 									<span class="image">
 										<img src="images1/pic01.jpg" alt="" />
 									</span>
-									<a href="/food_item?cuisine=italian">
+									<a href="/diet?cuisine=italian">
 										<h2>Italian</h2>
 										<div class="content">
 											<p>Pasta</p>
