--- a/main/foodandhealth/views/diet.html
+++ b/main/foodandhealth/views/diet.html
@@ -26,17 +26,17 @@
 								</a> -->
 
 							<!-- Nav -->
-								<nav>
+								<!-- <nav>
 									<ul>
 										<li><a href="#menu">Menu</a></li>
 									</ul>
-								</nav>
+								</nav> -->
 
 						</div>
 					</header>
 
 				<!-- Menu -->
-					<nav id="menu">
+					<!-- <nav id="menu">
 						<h2>Menu</h2>
 						<ul>
 							<li><a href="/">Home</a></li>
@@ -44,7 +44,7 @@
 							<li><a href="/news">News</a></li>
 							<li><a href="/template">Template</a></li>
 						</ul>
-					</nav>
+					</nav> -->
 
 				<!-- Main -->
 					<div id="main">
@@ -57,10 +57,10 @@
 									<span class="image">
 										<img src="images1/pic01.jpg" alt="" />
 									</span>
-									<a href="/food_item_list?diet=vegan">
-										<h2>Vegan</h2>
+									<a href="/food_item_list?diet=gluten_free">
+										<h2>Gluten Free</h2>
 										<div class="content">
-											<p>ooo yum</p>
+											<p>Eliminating gluten means avoiding wheat, barley, rye, and other gluten-containing grains and foods made from them (or that may have been cross contaminated).</p>
 										</div>
 									</a>
 								</article>
@@ -68,10 +68,10 @@
 									<span class="image">
 										<img src="images1/pic02.jpg" alt="" />
 									</span>
-									<a href="/food_item_list?diet=non-veg">
-										<h2>Non-veg</h2>
+									<a href="/food_item_list?diet=vegetarian">
+										<h2>Vegetarian</h2>
 										<div class="content">
-											<p>Butter Chicken</p>
+											<p>No ingredients may contain meat or meat by-products, such as bones or gelatin.</p>
 										</div>
 									</a>
 								</article>
@@ -79,10 +79,10 @@
 									<span class="image">
 										<img src="images1/pic03.jpg" alt="" />
 									</span>
-									<a href="generic.html">
-										<h2>Feugiat</h2>
+									<a href="/food_item_list?diet=vegan">
+										<h2>Vegan</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>No ingredients may contain meat or meat by-products, such as bones or gelatin, nor may they contain eggs, dairy, or honey.</p>
 										</div>
 									</a>
 								</article>
@@ -90,10 +90,10 @@
 									<span class="image">
 										<img src="images1/pic04.jpg" alt="" />
 									</span>
-									<a href="generic.html">
-										<h2>Tempus</h2>
+									<a href="/food_item_list?diet=lacto_veg">
+										<h2>Lacto-Vegetarian</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>All ingredients must be vegetarian and none of the ingredients can be or contain egg.</p>
 										</div>
 									</a>
 								</article>
@@ -101,10 +101,10 @@
 									<span class="image">
 										<img src="images1/pic05.jpg" alt="" />
 									</span>
-									<a href="generic.html">
-										<h2>Aliquam</h2>
+									<a href="/food_item_list?diet=ovo_veg">
+										<h2>Ovo-Vegetarian</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>All ingredients must be vegetarian and none of the ingredients can be or contain dairy.</p>
 										</div>
 									</a>
 								</article>
@@ -112,10 +112,10 @@
 									<span class="image">
 										<img src="images1/pic06.jpg" alt="" />
 									</span>
-									<a href="generic.html">
-										<h2>Veroeros</h2>
+									<a href="/food_item_list?diet=keto">
+										<h2>Ketogenic</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>The keto diet is based more on the ratio of fat, protein, and carbs in the diet rather than specific ingredients. Generally speaking, high fat, protein-rich foods are acceptable and high carbohydrate foods are not. The formula we use is 55-80% fat content, 15-35% protein content, and under 10% of carbohydrates.</p>
 										</div>
 									</a>
 								</article>
