--- a/main/foodandhealth/views/food_item.html
+++ b/main/foodandhealth/views/food_item.html
@@ -50,19 +50,19 @@
 					<div id="main">
 						<div class="inner">
 							<h1>Nutrition</h1>
-							<img src="/home/hrishi/Food-and-Health-Full-Stack-Web-Application/main/foodandhealth/views/html5up-phantom/images/spoonacular-nutrition-widget.png"/>
+							<img src="/images1/spoonacular-nutrition-widget.png"/>
 							<br><br>
 							<h1>Equipment</h1>
-							<img src="/home/hrishi/Food-and-Health-Full-Stack-Web-Application/main/foodandhealth/views/html5up-phantom/images/spoonacular-cooking-equipment-widget.png"/>
+							<img src="/images1/spoonacular-cooking-equipment-widget.png"/>
 							<br><br>
 							<h1>Recipe</h1>
-							<img src="/home/hrishi/Food-and-Health-Full-Stack-Web-Application/main/foodandhealth/views/html5up-phantom/images/recipe_card.jpg"/>
+							<img src="/images1/recipe_card.jpg"/>
 							<br><br>
 							<h1>Taste</h1>
-							<img src="/home/hrishi/Food-and-Health-Full-Stack-Web-Application/main/foodandhealth/views/html5up-phantom/images/spoonacular-taste-widget.png"/>
+							<img src="/images1/spoonacular-taste-widget.png"/>
 							<br><br>
 							<h1>Pricing</h1>
-							<img src="/home/hrishi/Food-and-Health-Full-Stack-Web-Application/main/foodandhealth/views/html5up-phantom/images/spoonacular-pricebreakdown-widget.png"/>
+							<img src="/images1/spoonacular-pricebreakdown-widget.png"/>
 							<br><br>
 
 						</div>
