--- a/main/foodandhealth/views/diet.html
+++ b/main/foodandhealth/views/diet.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Cuisines</title>
+		<title>Diets</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="/css1/main.css" />
@@ -55,7 +55,7 @@
 							<section class="tiles">
 								<article class="style1">
 									<span class="image">
-										<img src="images1/pic01.jpg" alt="" />
+										<img src="/images1/diets/gluten_free.jpg" alt="" width="353" height="326"/>
 									</span>
 									<a href="/food_item_list?diet=gluten_free">
 										<h2>Gluten Free</h2>
@@ -66,7 +66,7 @@
 								</article>
 								<article class="style2">
 									<span class="image">
-										<img src="images1/pic02.jpg" alt="" />
+										<img src="/images1/diets/vegetarian.jpg" alt="" width="353" height="326" />
 									</span>
 									<a href="/food_item_list?diet=vegetarian">
 										<h2>Vegetarian</h2>
@@ -77,7 +77,7 @@
 								</article>
 								<article class="style3">
 									<span class="image">
-										<img src="images1/pic03.jpg" alt="" />
+										<img src="/images1/diets/vegan.jpg" alt="" width="353" height="326" />
 									</span>
 									<a href="/food_item_list?diet=vegan">
 										<h2>Vegan</h2>
@@ -88,7 +88,7 @@
 								</article>
 								<article class="style4">
 									<span class="image">
-										<img src="images1/pic04.jpg" alt="" />
+										<img src="/images1/diets/lacto_veg.jpg" alt="" width="353" height="326" />
 									</span>
 									<a href="/food_item_list?diet=lacto_veg">
 										<h2>Lacto-Vegetarian</h2>
@@ -99,7 +99,7 @@
 								</article>
 								<article class="style5">
 									<span class="image">
-										<img src="images1/pic05.jpg" alt="" />
+										<img src="/images1/diets/ovo_veg.jpg" alt="" width="353" height="326" />
 									</span>
 									<a href="/food_item_list?diet=ovo_veg">
 										<h2>Ovo-Vegetarian</h2>
@@ -110,7 +110,7 @@
 								</article>
 								<article class="style6">
 									<span class="image">
-										<img src="images1/pic06.jpg" alt="" />
+										<img src="/images1/diets/keto.jpg" alt="" width="353" height="326" />
 									</span>
 									<a href="/food_item_list?diet=keto">
 										<h2>Ketogenic</h2>
