Update html files

--- a/main/foodandhealth/views/cuisines.html
+++ b/main/foodandhealth/views/cuisines.html
@@ -56,100 +56,100 @@
 							<section class="tiles">
 								<article class="style1">
 									<span class="image">
-										<img src="images1/pic01.jpg" alt="" />
+										<img src="images1/cuisines/american.jpg" alt="" width="300" height="300" />
 									</span>
 									<a href="/diet?cuisine=american">
 										<h2>American</h2>
 										<div class="content">
-											<p>A fusion of cultures based on bland, simple flavors</p>
+											<p><b>A fusion of cultures based on bland, simple flavors</b></p>
 										</div>
 									</a>
 								</article>
 								<article class="style2">
 									<span class="image">
-										<img src="images1/pic02.jpg" alt="" />
+										<img src="images1/cuisines/caribbean.jpg" alt="" width="300" height="300" />
 									</span>
 									<a href="/diet?cuisine=caribbean">
 										<h2>Caribbean</h2>
 										<div class="content">
-											<p>A world of flavour from soothing rum drinks to exquisite hot sauces</p>
+											<p><b>A world of flavour from soothing rum drinks to exquisite hot sauces</b></p>
 										</div>
 									</a>
 								</article>
 								<article class="style3">
 									<span class="image">
-										<img src="images1/pic03.jpg" alt="" />
+										<img src="images1/cuisines/chinese.jpg" alt="" width="300" height="300" />
 									</span>
 									<a href="/diet?cuisine=chinese">
 										<h2>Chinese</h2>
 										<div class="content">
-											<p>Rich and colorful with aromatic flavor and excellent taste</p>
+											<p><b>Rich and colorful with aromatic flavor and excellent taste</b></p>
 										</div>
 									</a>
 								</article>
 								<article class="style4">
 									<span class="image">
-										<img src="images1/pic04.jpg" alt="" />
+										<img src="images1/cuisines/greek.jpg" alt="" width="300" height="300" />
 									</span>
 									<a href="/diet?cuisine=greek">
 										<h2>Greek</h2>
 										<div class="content">
-											<p>A heart healthy cuisine with heavy use of olive oil</p>
+											<p><b>A heart healthy cuisine with heavy use of olive oil</b></p>
 										</div>
 									</a>
 								</article>
 								<article class="style5">
 									<span class="image">
-										<img src="images1/pic05.jpg" alt="" />
+										<img src="images1/cuisines/indian.jpg" alt="" width="300" height="300" />
 									</span>
 									<a href="/diet?cuisine=indian">
 										<h2>Indian</h2>
 										<div class="content">
-											<p>Spicy, rich, flavourful and diverse</p>
+											<p><b>Spicy, rich, flavourful and diverse</b></p>
 										</div>
 									</a>
 								</article>
 								<article class="style6">
 									<span class="image">
-										<img src="images1/pic06.jpg" alt="" />
+										<img src="images1/cuisines/italian.jpg" alt="" width="300" height="300" />
 									</span>
 									<a href="/diet?cuisine=italian">
 										<h2>Italian</h2>
 										<div class="content">
-											<p>Squisito!</p>
+											<p><b>Squisito!</b></p>
 										</div>
 									</a>
 								</article>
-								<article class="style7">
+								<article class="style2">
 									<span class="image">
-										<img src="images1/pic07.jpg" alt="" />
+										<img src="images1/cuisines/korean.jpg" alt="" width="300" height="300" />
 									</span>
-									<a href="/diet?cuisine=indian">
-										<h2>Veroeros</h2>
+									<a href="/diet?cuisine=korean">
+										<h2>Korean</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p><b>Intensely flavoured, spicy and pungent</b></p>
 										</div>
 									</a>
 								</article>
-								<article class="style8">
+								<article class="style1">
 									<span class="image">
-										<img src="images1/pic08.jpg" alt="" />
+										<img src="images1/cuisines/mexican.jpg" alt="" width="300" height="300" />
 									</span>
-									<a href="/diet?cuisine=indian">
-										<h2>Veroeros</h2>
+									<a href="/diet?cuisine=mexican">
+										<h2>Mexican</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p><b>A nice blend of the indigenous and Spanish cuisine</b></p>
 										</div>
 									</a>
 								</article>
-								<article class="style9">
+								<article class="style3">
 									<span class="image">
-										<img src="images1/pic09.jpg" alt="" />
+										<img src="images1/cuisines/thai.jpg" alt="" width="300" height="300" />
 									</span>
-									<a href="/diet?cuisine=indian">
-										<h2>Veroeros</h2>
+									<a href="/diet?cuisine=thai">
+										<h2>Thai</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p><b>A balance of sour, sweet, salty, bitter and spicy!</b> </p>
 										</div>
 									</a>
 								</article>
