--- a/main/foodandhealth/views/diet.html
+++ b/main/foodandhealth/views/diet.html
@@ -55,114 +55,73 @@
 							<section class="tiles">
 								<article class="style1">
 									<span class="image">
-										<img src="/images1/diets/gluten_free.jpg" alt="" width="353" height="326"/>
+										<img src="/images1/diets/gluten_free.jpg" alt="" width="300" height="300"/>
 									</span>
 									<a href="/food_item_list?diet=gluten_free">
 										<h2>Gluten Free</h2>
 										<div class="content">
-											<p>Eliminating gluten means avoiding wheat, barley, rye, and other gluten-containing grains and foods made from them (or that may have been cross contaminated).</p>
+											<p><b>A diet that avoids wheat, barley, rye, and other gluten-containing grains</b></p>
 										</div>
 									</a>
 								</article>
 								<article class="style2">
 									<span class="image">
-										<img src="/images1/diets/vegetarian.jpg" alt="" width="353" height="326" />
+										<img src="/images1/diets/vegetarian.jpg" alt="" width="300" height="300" />
 									</span>
 									<a href="/food_item_list?diet=vegetarian">
 										<h2>Vegetarian</h2>
 										<div class="content">
-											<p>No ingredients may contain meat or meat by-products, such as bones or gelatin.</p>
+											<p><b>A diet without any meat or meat by-products</b></p>
 										</div>
 									</a>
 								</article>
 								<article class="style3">
 									<span class="image">
-										<img src="/images1/diets/vegan.jpg" alt="" width="353" height="326" />
+										<img src="/images1/diets/vegan.jpg" alt="" width="300" height="300" />
 									</span>
 									<a href="/food_item_list?diet=vegan">
 										<h2>Vegan</h2>
 										<div class="content">
-											<p>No ingredients may contain meat or meat by-products, such as bones or gelatin, nor may they contain eggs, dairy, or honey.</p>
+											<p><b>A diet without any meat, eggs, dairy, or honey</b> </p>
 										</div>
 									</a>
 								</article>
 								<article class="style4">
 									<span class="image">
-										<img src="/images1/diets/lacto_veg.jpg" alt="" width="353" height="326" />
+										<img src="/images1/diets/lacto_veg.jpg" alt="" width="300" height="300" />
 									</span>
 									<a href="/food_item_list?diet=lacto_veg">
 										<h2>Lacto-Vegetarian</h2>
 										<div class="content">
-											<p>All ingredients must be vegetarian and none of the ingredients can be or contain egg.</p>
+											<p><b>A vegetarian diet where none of the ingredients can be or contain egg</b></p>
 										</div>
 									</a>
 								</article>
 								<article class="style5">
 									<span class="image">
-										<img src="/images1/diets/ovo_veg.jpg" alt="" width="353" height="326" />
+										<img src="/images1/diets/ovo_veg.jpg" alt="" width="300" height="300" />
 									</span>
 									<a href="/food_item_list?diet=ovo_veg">
 										<h2>Ovo-Vegetarian</h2>
 										<div class="content">
-											<p>All ingredients must be vegetarian and none of the ingredients can be or contain dairy.</p>
+											<p><b>A vegetarian diet where none of the ingredients can be or contain dairy</b></p>
 										</div>
 									</a>
 								</article>
 								<article class="style6">
 									<span class="image">
-										<img src="/images1/diets/keto.jpg" alt="" width="353" height="326" />
+										<img src="/images1/diets/keto.jpg" alt="" width="300" height="300" />
 									</span>
 									<a href="/food_item_list?diet=keto">
 										<h2>Ketogenic</h2>
 										<div class="content">
-											<p>The keto diet is based more on the ratio of fat, protein, and carbs in the diet rather than specific ingredients. Generally speaking, high fat, protein-rich foods are acceptable and high carbohydrate foods are not. The formula we use is 55-80% fat content, 15-35% protein content, and under 10% of carbohydrates.</p>
+											<p></b>The keto diet is based more on the ratio of fat, protein, and carbs in the diet</p>
 										</div>
 									</a>
 								</article>
 							</section>
 						</div>
 					</div>
-
-				<!-- Footer -->
-					<!-- <footer id="footer">
-						<div class="inner">
-							<section>
-								<h2>Get in touch</h2>
-								<form method="post" action="#">
-									<div class="fields">
-										<div class="field half">
-											<input type="text" name="name" id="name" placeholder="Name" />
-										</div>
-										<div class="field half">
-											<input type="email" name="email" id="email" placeholder="Email" />
-										</div>
-										<div class="field">
-											<textarea name="message" id="message" placeholder="Message"></textarea>
-										</div>
-									</div>
-									<ul class="actions">
-										<li><input type="submit" value="Send" class="primary" /></li>
-									</ul>
-								</form>
-							</section>
-							<section>
-								<h2>Follow</h2>
-								<ul class="icons">
-									<li><a href="#" class="icon brands style2 fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="#" class="icon brands style2 fa-facebook-f"><span class="label">Facebook</span></a></li>
-									<li><a href="#" class="icon brands style2 fa-instagram"><span class="label">Instagram</span></a></li>
-									<li><a href="#" class="icon brands style2 fa-dribbble"><span class="label">Dribbble</span></a></li>
-									<li><a href="#" class="icon brands style2 fa-github"><span class="label">GitHub</span></a></li>
-									<li><a href="#" class="icon brands style2 fa-500px"><span class="label">500px</span></a></li>
-									<li><a href="#" class="icon solid style2 fa-phone"><span class="label">Phone</span></a></li>
-									<li><a href="#" class="icon solid style2 fa-envelope"><span class="label">Email</span></a></li>
-								</ul>
-							</section>
-							<ul class="copyright">
-								<li>&copy; Untitled. All rights reserved</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-							</ul>
-						</div>
-					</footer> -->
 
 			</div>
 
