--- a/main/foodandhealth/views/food_item_list.ejs
+++ b/main/foodandhealth/views/food_item_list.ejs
@@ -53,72 +53,17 @@
 								<h1>FOOD ITEMS</h1>
 							</header>
 							<section class="tiles">
-								<article class="style1">
-									<span class="image">
-										<img src="<%= img1 %>" alt="" width="300" height="300" />
-									</span>
-									<a href="/food_item?item=i1">
-										<h2><%= item1 %></h2>
-										<!-- <div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-										</div> -->
-									</a>
-								</article>
-								<article class="style2">
-									<span class="image">
-										<img src="images1/pic02.jpg" alt="" width="300" height="300" />
-									</span>
-									<a href="/food_item?item=i2">
-										<h2>Lorem</h2>
-										<!-- <div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-										</div> -->
-									</a>
-								</article>
-								<article class="style3">
-									<span class="image">
-										<img src="images1/pic03.jpg" alt="" width="300" height="300" />
-									</span>
-									<a href="/food_item?item=i3">
-										<h2>Feugiat</h2>
-										<!-- <div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-										</div> -->
-									</a>
-								</article>
-								<article class="style4">
-									<span class="image">
-										<img src="images1/pic04.jpg" alt="" width="300" height="300" />
-									</span>
-									<a href="/food_item?item=i4">
-										<h2>Tempus</h2>
-										<!-- <div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-										</div> -->
-									</a>
-								</article>
-								<article class="style5">
-									<span class="image">
-										<img src="images1/pic05.jpg" alt="" width="300" height="300" />
-									</span>
-									<a href="/food_item?item=i5">
-										<h2>Aliquam</h2>
-										<!-- <div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-										</div> -->
-									</a>
-								</article>
-								<article class="style6">
-									<span class="image">
-										<img src="images1/pic06.jpg" alt="" width="300" height="300" />
-									</span>
-									<a href="/food_item?item=i6">
-										<h2>Veroeros</h2>
-										<!-- <div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-										</div> -->
-									</a>
-								</article>								
+								<% for( var i = 0; i < Math.min(item.length,6); i++ ) { %>
+									<article class=<%="style"+(i+1)%>>
+										<span class="image">
+											<img src= "<%= item[i].image %>"" alt="" width="300" height="300" />
+										</span>
+										<a href="/food_item?item=i1">
+											<h2><%= item[i].title %></h2>
+										</a>
+									</article>
+								<% } %>
+														
 							</section>
 							<!-- <span class="image main"><img src="images1/pic13.jpg" alt="" /></span> -->
 						</div>
