added png support

--- a/main/foodandhealth/views/food_item.ejs
+++ b/main/foodandhealth/views/food_item.ejs
@@ -52,8 +52,18 @@
 							<h1>Recipe</h1>
 							<img src="<%= url_recipe %>"/>
 							<br><br>
+
+							<h1>Nutrition</h1>
+							<img src= "<%= "/images_nutrition/"+id+".png"%>"/>
+							<br><br> 
+
+							
+
 						</div>
+						
 					</div>
+
+					
 			</div>
 
 		<!-- Scripts -->
