--- a/main/foodandhealth/views/index.html
+++ b/main/foodandhealth/views/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Forty by HTML5 UP</title>
+		<title>Eat Healthy</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="/css/main.css" />
@@ -43,7 +43,7 @@
 					<section id="banner" class="major">
 						<div class="inner">
 							<header class="major">
-								<h1>One Stop Destinantion for Food Wellness</h1>
+								<h1>One Stop Destination for Food Wellness</h1>
 							</header>
 							<div class="content">
 								<p>Cuisines, Recipes, Food Blogs and more<br />
