--- a/main/foodandhealth/views/food_item.ejs
+++ b/main/foodandhealth/views/food_item.ejs
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Elements - Phantom by HTML5 UP</title>
+		<title>EatHealthy</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="/css1/main.css" />
@@ -21,9 +21,9 @@
 						<div class="inner">
 
 							<!-- Logo -->
-								<a href="index.html" class="logo">
+								<!-- <a href="index.html" class="logo">
 									<span class="symbol"><img src="images/logo.svg" alt="" /></span><span class="title">Phantom</span>
-								</a>
+								</a> -->
 
 							<!-- Nav -->
 								<!-- <nav>
@@ -50,11 +50,11 @@
 					<div id="main">
 						<div class="inner">
 							<h1>Recipe</h1>
-							<img src="<%= url_recipe %>"/>
+							<span class="image main"><img src="<%= url_recipe %>"/></span>
 							<br><br>
 
 							<h1>Nutrition</h1>
-							<img src= "<%= "/images_nutrition/"+id+".png"%>"/>
+							<span class="image main"><img src= "<%= "/images_nutrition/"+id+".png"%>"/></span>
 							<br><br> 
 
 							
