--- a/main/foodandhealth/views/index.html
+++ b/main/foodandhealth/views/index.html
@@ -19,7 +19,7 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<a href="/" class="logo"><strong>EatHealthy</strong> <span>by DL Gang</span></a>
+						<a href="/" class="logo"><strong>EatHealthy</strong> <span>by Scarecrows</span></a>
 						<nav>
 							<a href="#menu">Menu</a>
 						</nav>
@@ -46,8 +46,8 @@
 								<h1>One Stop Destination for Food Wellness</h1>
 							</header>
 							<div class="content">
-								<p>Cuisines, Recipes, Food Blogs and more<br />
-								COZ health is wealth</p>
+								<p>Healthy Meal planning, Food Blogs, <br />
+								 and more for a nourishing lifestyle!</p>
 								<ul class="actions">
 									<li><a href="#one" class="button next scrolly">Get Started</a></li>
 								</ul>
@@ -65,8 +65,8 @@
 										<img src="images/pic01.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="/cuisines" class="link">Cuisines</a></h3>
-										<p>Ipsum dolor sit amet</p>
+										<h3><a href="/cuisines" class="link">Meal Planning</a></h3>
+										<p>Choose your favourite cuisine and diet to get personalized suggestions for dishes. Get recipes and nutrient content , all in one place.</p>
 									</header>
 								</article>
 								<article>
@@ -74,8 +74,8 @@
 										<img src="images/pic02.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="/news" class="link">Trending Blogs</a></h3>
-										<p>feugiat amet tempus</p>
+										<h3><a href="/news" class="link">Trending Food Blogs</a></h3>
+										<p>All the recent food articles to guide you in your healthy journey, just a click away</p>
 									</header>
 								</article>
 								<article>
@@ -83,17 +83,8 @@
 										<img src="images/pic03.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Personal Chef</a></h3>
-										<p>Lorem etiam nullam</p>
-									</header>
-								</article>
-								<article>
-									<span class="image">
-										<img src="images/pic04.jpg" alt="" />
-									</span>
-									<header class="major">
-										<h3><a href="landing.html" class="link">Meal Planning</a></h3>
-										<p>Nisl sed aliquam</p>
+										<h3><a href="/maintenance" class="link">Personal Chef</a></h3>
+										<p>You have the ingredients. We have the recipes. Make something delicious tonight!</p>
 									</header>
 								</article>
 								<article>
@@ -101,33 +92,10 @@
 										<img src="images/pic05.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Healthy Outlets Near You</a></h3>
-										<p>Ipsum dolor sit amet</p>
+										<h3><a href="/maintenance" class="link">Healthy Living</a></h3>
+										<p>Lifestyle tips, Nutrition tips, special diet plans, healthy food outlets near you and more!</p>
 									</header>
 								</article>
-								<article>
-									<span class="image">
-										<img src="images/pic06.jpg" alt="" />
-									</span>
-									<header class="major">
-										<h3><a href="landing.html" class="link">Etiam</a></h3>
-										<p>Feugiat amet tempus</p>
-									</header>
-								</article>
-							</section>
-
-						<!-- Two -->
-							<section id="two">
-								<div class="inner">
-									<header class="major">
-										<h2>Massa libero</h2>
-									</header>
-									<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet pharetra et feugiat tempus.</p>
-									<ul class="actions">
-										<li><a href="landing.html" class="button next">Get Started</a></li>
-									</ul>
-								</div>
-							</section>
 
 					</div>
 
