--- a/main/foodandhealth/views/index.html
+++ b/main/foodandhealth/views/index.html
@@ -35,6 +35,9 @@
 						<ul class="actions stacked">
 							<li><a href="#" class="button primary fit">Get Started</a></li>
 						</ul>
+						<ul class="actions stacked">
+							<li><a href="/maintenance" class="button primary fit">About Us</a></li>
+						</ul>
 					</nav>
 
 				<!-- Banner -->
