--- a/main/foodandhealth/views/maintenance.html
+++ b/main/foodandhealth/views/maintenance.html
@@ -29,13 +29,14 @@
                     <nav id="menu">
                         <ul class="links">
                             <li><a href="/">Home</a></li>
-                            <li><a href="/cuisines">Cuisines</a></li>
+                            <li><a href="/cuisines">Meal Planning</a></li>
                             <li><a href="/news">News</a></li>
-                            <li><a href="/template">Template</a></li>
                         </ul>
                         <ul class="actions stacked">
                             <li><a href="#" class="button primary fit">Get Started</a></li>
-                            <li><a href="#" class="button fit">Log In</a></li>
+                        </ul>
+                        <ul class="actions stacked">
+                            <li><a href="/maintenance" class="button primary fit">About Us</a></li>
                         </ul>
                     </nav>
 
