Finalize all css designs and update content

--- a/main/foodandhealth/views/cuisines.html
+++ b/main/foodandhealth/views/cuisines.html
@@ -1,9 +1,5 @@
 <!DOCTYPE HTML>
-<!--
-	Phantom by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
+
 <html>
 	<head>
 		<title>Cuisines</title>
@@ -51,7 +47,7 @@
 					<div id="main">
 						<div class="inner">
 							<header>
-								<h1>CUISINES</h1>
+								<h1><center>CUISINES</center></h1>
 							</header>
 							<section class="tiles">
 								<article class="style1">
