--- a/main/foodandhealth/views/food_item_list.ejs
+++ b/main/foodandhealth/views/food_item_list.ejs
@@ -1,9 +1,5 @@
 <!DOCTYPE HTML>
-<!--
-	Phantom by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
+
 <html>
 	<head>
 		<title>Food Items</title>
@@ -50,7 +46,7 @@
 					<div id="main">
 						<div class="inner">
 							<header>
-								<h1>FOOD ITEMS</h1>
+								<h1><center>FOOD ITEMS</center></h1>
 							</header>
 							<section class="tiles">
 								<% for( var i = 0; i < Math.min(item.length,6); i++ ) { %>
