--- a/main/foodandhealth/views/index.html
+++ b/main/foodandhealth/views/index.html
@@ -1,9 +1,5 @@
 <!DOCTYPE HTML>
-<!--
-	Forty by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
+
 <html>
 	<head>
 		<title>Eat Healthy</title>
@@ -72,7 +68,7 @@
 								</article>
 								<article>
 									<span class="image">
-										<img src="images/pic02.jpg" alt="" />
+										<img src="images/blog_1.jpg" alt="" />
 									</span>
 									<header class="major">
 										<h3><a href="/news" class="link">Trending Food Blogs</a></h3>
@@ -94,7 +90,7 @@
 									</span>
 									<header class="major">
 										<h3><a href="/maintenance" class="link">Healthy Living</a></h3>
-										<p>Lifestyle tips, Nutrition tips, special diet plans, healthy food outlets near you and more!</p>
+										<p>Lifestyle, Nutrition tips, Special Diet Plans, Custom Workout, Healthy Food outlets near you and more!</p>
 									</header>
 								</article>
 					</div>
