--- a/main/foodandhealth/views/maintenance.html
+++ b/main/foodandhealth/views/maintenance.html
@@ -1,78 +1,33 @@
 <!DOCTYPE HTML>
 <!--
-	Forty by HTML5 UP
+	Eventually by HTML5 UP
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
 	<head>
-		<title>Generic - Forty by HTML5 UP</title>
+		<title>Eventually by HTML5 UP</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="/css/main.css" />
-		<noscript><link rel="stylesheet" href="/css/noscript.css" /></noscript>
+		<link rel="stylesheet" href="/css2/main.css" />
 	</head>
 	<body class="is-preload">
 
-		<!-- Wrapper -->
-			<div id="wrapper">
+		<!-- Header -->
+			<header id="header">
+				<h1>Coming Soon</h1>
+				<p>This webpage is under construction<br />
+				We'll be here soon with new and awesome content, subscribe to br notified.</a>.</p>
+			</header>
 
-				<!-- Header -->
-					<header id="header">
-						<a href="/" class="logo"><strong>Eat Healthy</strong> <span>by Scarecrows</span></a>
-						<nav>
-							<a href="#menu">Menu</a>
-						</nav>
-					</header>
-
-				<!-- Menu -->
-                    <nav id="menu">
-                        <ul class="links">
-                            <li><a href="/">Home</a></li>
-                            <li><a href="/cuisines">Meal Planning</a></li>
-                            <li><a href="/news">News</a></li>
-                        </ul>
-                        <ul class="actions stacked">
-                            <li><a href="#" class="button primary fit">Get Started</a></li>
-                        </ul>
-                        <ul class="actions stacked">
-                            <li><a href="/maintenance" class="button primary fit">About Us</a></li>
-                        </ul>
-                    </nav>
-
-				<!-- Main -->
-					<div id="main" class="alt" style="text-align: center; width: 100%;">
-
-						<!-- One -->
-							<img src="https://www.premierwebdesignsolutions.com/wp-content/uploads/2018/05/Advantage-of-Website-Maintenance-for-Your-Business-1.jpg" alt=""/>
-
-					</div>
-
-				
-
-				<!-- Footer -->
-					<footer id="footer">
-						<div class="inner">
-							<ul class="icons">
-								<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
-								<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
-								<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
-								<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
-								<li><a href="#" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-							</ul>
-						</div>
-					</footer>
-
-			</div>
+		<!-- Signup Form -->
+			<form id="signup-form" method="post" action="#">
+				<input type="email" name="email" id="email" placeholder="Email Address" />
+				<input type="submit" value="Sign Up" />
+			</form>
 
 		<!-- Scripts -->
-			<script src="/js/jquery.min.js"></script>
-			<script src="/js/jquery.scrolly.min.js"></script>
-			<script src="/js/jquery.scrollex.min.js"></script>
-			<script src="/js/browser.min.js"></script>
-			<script src="/js/breakpoints.min.js"></script>
-			<script src="/js/util.js"></script>
-			<script src="/js/main.js"></script>
+			<script src="/js2/main.js"></script>
 
 	</body>
 </html>
