--- a/main/foodandhealth/views/news.ejs
+++ b/main/foodandhealth/views/news.ejs
@@ -1,9 +1,5 @@
 <!DOCTYPE HTML>
-<!--
-	Phantom by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
+
 <html>
 	<head>
 		<title>Trending Food Blogs</title>
@@ -50,7 +46,7 @@
 					<div id="main">
 						<div class="inner">
 							<header>
-								<h1>TRENDING FOOD BLOGS</h1>
+								<h1><center>TRENDING FOOD BLOGS</center></h1>
 							</header>
 							<section class="tiles">
 								<% var p = Math.floor((Math.random() * 5) + 0);
