Update food item

--- a/views/food_item.ejs
+++ b/views/food_item.ejs
@@ -43,10 +43,10 @@
 					</nav> -->
 
 				<!-- Main -->
-					<!-- <div id="main">
+					<div id="main">
 						<div class="inner">
 						<h1><center>RECIPE</center></h1>
-						<span class="image main"><center><img src="<%= url_recipe %>" width="1" height="600"/></center></span>
+						<span class="image main"><center><img src="<%= url_recipe %>"/></center></span>
 						<br><br>
 
 						<h1><center>NUTRITION</center></h1>
@@ -57,9 +57,9 @@
 
 						</div>
 						
-					</div> -->
+					</div>
 
-				<center>
+				<!-- <center>
 					<div class="row">
 						<div class="column">
 							<h1><center>RECIPE</center></h1>
@@ -72,7 +72,7 @@
 							<br><br> 
 						</div>
 					</div>
-				</center>					
+				</center>					 -->
 			</div>
 
 		<!-- Scripts -->
