Change css design to include headers

--- a/views/maintenance.html
+++ b/views/maintenance.html
@@ -16,8 +16,8 @@
 		<!-- Header -->
 			<header id="header">
 				<h1>Coming Soon</h1>
-				<p>This webpage is under construction<br />
-				We'll be here soon with new and awesome content, subscribe to br notified.</a>.</p>
+					<p>This webpage is under construction<br />
+					We'll be here soon with new and awesome content, subscribe to br notified.</a>.</p>
 			</header>
 
 		<!-- Signup Form -->
@@ -25,6 +25,15 @@
 				<input type="email" name="email" id="email" placeholder="Email Address" />
 				<input type="submit" value="Sign Up" />
 			</form>
+
+		<!-- Footer -->
+			<footer id="footer">
+				<ul class="icons">
+					<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+					<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+					<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+					<li><a href="#" class="icon fa-envelope"><span class="label">Email</span></a></li>
+			</footer>
 
 		<!-- Scripts -->
 			<script src="/js2/main.js"></script>
