--- a/views/food_item.ejs
+++ b/views/food_item.ejs
@@ -12,35 +12,28 @@
 		<!-- Wrapper -->
 			<div id="wrapper">
 
-				<!-- Header -->
-					<header id="header">
-						<div class="inner">
-
-							<!-- Logo -->
-								<!-- <a href="index.html" class="logo">
-									<span class="symbol"><img src="images/logo.svg" alt="" /></span><span class="title">Phantom</span>
-								</a> -->
-
-							<!-- Nav -->
-								<!-- <nav>
-									<ul>
-										<li><a href="#menu">Menu</a></li>
-									</ul>
-								</nav> -->
-
-						</div>
-					</header>
-
-				<!-- Menu -->
-					<!-- <nav id="menu">
-						<h2>Menu</h2>
-						<ul>
-							<li><a href="/">Home</a></li>
-							<li><a href="/cuisines">Cuisines</a></li>
-							<li><a href="/news">News</a></li>
-							<li><a href="/template">Template</a></li>
-						</ul>
-					</nav> -->
+			<!-- Header -->
+				<header id="header" class="alt">
+					<a href="/" class="logo"><strong>EatHealthy</strong> <span>by Scarecrows</span></a>
+					<nav>
+						<a href="#menu">Menu</a>
+					</nav>
+				</header>
+				
+			<!-- Menu -->
+				<nav id="menu">
+					<ul class="links">
+						<li><a href="/">Home</a></li>
+						<li><a href="/cuisines">Meal Planning</a></li>
+						<li><a href="/news">News</a></li>
+					</ul>
+					<ul class="actions stacked">
+						<li><a href="#" class="button primary fit">Get Started</a></li>
+					</ul>
+					<ul class="actions stacked">
+						<li><a href="/maintenance" class="button primary fit">About Us</a></li>
+					</ul>
+				</nav>
 
 				<!-- Main -->
 					<div id="main">
@@ -76,11 +69,11 @@
 			</div>
 
 		<!-- Scripts -->
-			<script src="/js/jquery.min.js"></script>
-			<script src="/js/browser.min.js"></script>
-			<script src="/js/breakpoints.min.js"></script>
-			<script src="/js/util.js"></script>
-			<script src="/js/main.js"></script>
+			<script src="/js1/jquery.min.js"></script>
+			<script src="/js1/browser.min.js"></script>
+			<script src="/js1/breakpoints.min.js"></script>
+			<script src="/js1/util.js"></script>
+			<script src="/js1/main.js"></script>
 
 	</body>
 </html>
