Update footer icon redirect links

--- a/views/index.html
+++ b/views/index.html
@@ -107,11 +107,11 @@
 					<footer id="footer">
 						<div class="inner">
 							<ul class="icons">
-								<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
-								<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
-								<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
-								<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
-								<li><a href="#" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+								<li><a href="https://mail.google.com/mail/?view=cm&fs=1&to=f20190179@goa.bits-pilani.ac.in" target="_blank" class="icon brands alt fa-google"><span class="label">Gmail</span></a></li>
+								<li><a href="https://medium.com/@hitarthkothari9/coding-diaries-bits-pilani-postman-api-hackathon-1-0-f25988533142?source=rss------hackathons-5" target="_blank" class="icon brands alt fa-medium"><span class="label">Medium</span></a></li>
+								<li><a href="https://github.com/hrishi508/Food-and-Health-Full-Stack-Web-Application" target="_blank" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+								<li><a href="https://www.youtube.com/channel/UCe1MW9717ZeaElBZLde0HYw" target="_blank" class="icon brands alt fa-youtube"><span class="label">YouTube</span></a></li>
+								<li><a href="https://www.linkedin.com/in/hrishikesh-kusneniwar-04b3bb1b2/" target="_blank" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 							</ul>
 						</div>
 					</footer>
