--- a/views/maintenance.html
+++ b/views/maintenance.html
@@ -17,7 +17,7 @@
 			<header id="header">
 				<h1>Coming Soon</h1>
 					<p>This webpage is under construction<br />
-					We'll be here soon with new and awesome content, subscribe to br notified.</a>.</p>
+					We'll be here soon with new and awesome content, subscribe to be notified</a></p>
 			</header>
 
 		<!-- Signup Form -->
@@ -29,10 +29,11 @@
 		<!-- Footer -->
 			<footer id="footer">
 				<ul class="icons">
-					<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-					<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-					<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-					<li><a href="#" class="icon fa-envelope"><span class="label">Email</span></a></li>
+					<li><a href="https://mail.google.com/mail/?view=cm&fs=1&to=f20190179@goa.bits-pilani.ac.in" target="_blank" class="icon fa-envelope"><span class="label">Gmail</span></a></li>
+					<li><a href="https://medium.com/@hitarthkothari9/coding-diaries-bits-pilani-postman-api-hackathon-1-0-f25988533142?source=rss------hackathons-5" target="_blank" class="icon brands fa-medium"><span class="label">Medium</span></a></li>
+					<li><a href="https://github.com/hrishi508/Food-and-Health-Full-Stack-Web-Application" target="_blank" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+					<li><a href="https://www.youtube.com/channel/UCe1MW9717ZeaElBZLde0HYw" target="_blank" class="icon brands fa-youtube"><span class="label">YouTube</span></a></li>
+					<li><a href="https://www.linkedin.com/in/hrishikesh-kusneniwar-04b3bb1b2/" target="_blank" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 			</footer>
 
 		<!-- Scripts -->
